ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/InterfaceDeclarations/parserInterfaceDeclaration3/input.ts.stderr
error: 'implements', 'interface', 'let', 'package', 'private', 'protected',  'public', 'static', or 'yield' cannot be used as an identifier in strict mode
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/InterfaceDeclarations/parserInterfaceDeclaration3/input.ts:1:1
  |
1 | public interface I {
  | ^^^^^^

error: 'public' modifier is not allowed for interfaces
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/InterfaceDeclarations/parserInterfaceDeclaration3/input.ts:1:1
  |
1 | public interface I {
  | ^^^^^^

